--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.9",
     "next-videos": "1.4.1",
     "postcss": "8.4.25",
+    "primeflex": "^3.3.1",
     "primereact": "^9.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
