--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
+    "react-select": "^5.7.4",
     "sass": "^1.63.6",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.2",
