handled sending email from emailJs

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_WORDPRESS_API_ENDPOINT = http://localhost/farmacenter/graphql
+
+NODEMAILER_PW = "howmzixicdabzqga"
+NODEMAILER_EMAIL = "amircr7h3@gmail.com"
