--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@material-tailwind/react": "^2.0.5",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "emailjs": "^4.0.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "faker": "^6.6.6",
     "next": "13.4.9",
     "next-videos": "1.4.1",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.25",
+    "postmark": "^3.0.18",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.0",
