--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
     "react-select": "^5.7.4",
+    "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.2",
