--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "primereact": "^9.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-select-component": "^4.3.4",
     "react-player": "^2.12.0",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
