--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "faker": "^6.6.6",
+    "iran-cities-json": "^2.0.0",
     "next": "13.4.9",
     "next-videos": "1.4.1",
     "nodemailer": "^6.9.4",
