--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "react-dom": "18.2.0",
     "react-multi-select-component": "^4.3.4",
     "react-player": "^2.12.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.7.4",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
+    "slick-carousel": "^1.8.1",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
