--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
+    "sharp": "^0.32.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.2",
