updated some essential things

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_WORDPRESS_API_ENDPOINT = http://localhost/farmacenter/graphql
+NEXT_PUBLIC_WORDPRESS_API_ENDPOINT = https://pharmacenteriran.com/index.php?graphql
