--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
+    "serve": "^14.2.1",
     "sharp": "^0.32.4",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.0.4",
